# transversal-gate-finder

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: examples.ipynb  profile.json  profile_output.prof  third_order_gates.ipynb  time_profiling.py  transversal_gates_examples.ipynb
legacy/: old_examples.ipynb  third_order_gates.py
src/third_order_gates/: __init__.py  transversal_gates.py
src/transversal_gate_finder/: __init__.py  core.py  flint_wrappers.py  restruct_refinements2.md  restructuring.md  restructuring_refinements.md  translation_invariance.py  transversal_gate_finder.py
src/transversal_gate_finder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: speed_test.ipynb  test_pullback.py
utils/: utils.py
